Changed everything back to linkedlists